fix: when adjust width of window, ta_codepad overlap 'result' screen

--- a/play/highlightjs-theme-namu.css
+++ b/play/highlightjs-theme-namu.css
@@ -7,7 +7,7 @@ code.hljs {
     padding:3px 5px
 }
 .hljs {
-    color: #8ba88c;
+    color: #9f9f9f;
     background: #152330
 }
 .hljs-comment, .hljs-quote {
@@ -15,7 +15,7 @@ code.hljs {
     font-style:italic
 }
 .hljs-doctag, .hljs-formula, .hljs-keyword {
-    color: #8CC540;
+    color: #8cc540;
 }
 .hljs-deletion, .hljs-name, .hljs-section, .hljs-selector-tag, .hljs-subst {
     color:#e06c75
@@ -27,19 +27,19 @@ code.hljs {
     color:#3d4e5f
 }
 .hljs-type {
-    color:#d9bda4
+    color:#22E78A
 }
 .hljs-addition, .hljs-attribute, .hljs-meta .hljs-string, .hljs-regexp, .hljs-string {
-    color:#cb7267
+    color:#607199
 }
 .hljs-number {
     color:#b9a999
 }
 .hljs-bullet, .hljs-link, .hljs-meta, .hljs-selector-id, .hljs-symbol, .hljs-title {
-    color:#3070a5
+    color:#b3a927
 }
 .hljs-built_in, .hljs-class .hljs-title, .hljs-title.class_ {
-    color:#d9bda4
+    color:#22E78A
 }
 .hljs-emphasis {
     font-style:italic
